assets/css/style.css
/* general styling  */

* {
  margin: 0;
}

html {
	scroll-behavior: smooth;
} 

ul {
  padding: 0;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

/* reusable classes */

.overflow{
    overflow: hidden;
}
.container {
  margin: auto;
  max-width: 1200px;

}

.flex-box {
  display: flex;
  justify-content: center;
  align-items: center;
}

.text-box {
  border: 1px solid white;
  box-sizing: border-box;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  padding: 2em;
  width: 20em;
}

.text-box > h1,
h2,
h3,
p,
a {
  margin: 1em 0.1em;
}



.center {
  text-align: center;
}

.hidden {
  visibility: hidden;
  position: absolute;

 
}

.btn {
  display: block;
  border: 1px solid white;
  color: white;
  padding: 0.3em 1em;
  font-size: 1.4em;
  border-radius: 20px;
}

input[type="submit"].btn {
  background-color: pink;
  border: 0;
}

/* css grid */
.main-grid {
  display: grid;
  grid-template-rows: repeat(auto-fit, repeat(100px, 1fr));
  grid-template-areas:
    "header"
    "about"
    "benefits"
    "join"
    "footer";
}

.main-grid > * {
  background-color: pink;
  border: 1px solid grey;
  box-sizing: border-box;
}

/* header section */

header {
  grid-area: header;
  height: 640px;
  background: url(../img/AdobeStock_330497250_mirrored_rezised.webp) bottom center;
  background-size: cover;
  background-position: fixed;
}

/* header > nav */
.navbar{
    position: fixed;
    background-color: rgba(255, 255, 255, 0.39);
    width: 100%;
    height: 4rem;
    z-index: 3;
    position: fixed;
    box-shadow: rgba(128, 128, 128, 0.24) 0px 1px 2px;
}


.hamburger-lines {
    display: flex;
    height: 2em;
    width: 2.44em;
    flex-direction: column;
    justify-content: space-between;
    position: fixed;
    left: 10px;
    top: 10px;
    z-index: 4;
}

.nav-container > .checkbox {
    height: 3rem;
    width: 3em;
    position: fixed;
    left: 9px;
    top: 2px;
    z-index: 5;
    opacity: 0;
    cursor: pointer;
}

.hamburger-lines > .line {
    display: block;
    background-color: black;
    height: 5px;
    width: 100%;
    border-radius: 12px;
}

.hamburger-lines .line1 {
    transform-origin: 0% 0%;
    transition: transform 0.4s ease-in-out;
  
  }
  
  .nav-container .hamburger-lines .line2 {
    transition: transform 0.2s ease-in-out;
  }
  
  .hamburger-lines .line3 {
    transform-origin: 0% 100%;
    transition: transform 0.4s ease-in-out;
  }

  .menu-items {
    background-color: rgba(255, 255, 255, 0.575);
    padding-top: 1em;
    height: 100vh;
    width: 50%;
    transform: translatex(-150%);
    display: flex;
    flex-direction: column;
    margin-left: -40px;
    padding-left: 50px;
    transition: transform 0.4s ease-in-out;
    text-align: center;
    position: fixed;
    box-shadow: rgba(70, 70, 70, 0.7) 1px 4px 8px;
  }
  
  .menu-items li {
    margin-bottom: 1.2rem;
    font-size: 1.5rem;
    font-weight: 500;
  }


  .nav-container input[type="checkbox"]:checked ~ .menu-items {
    transform: translateX(0);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
    transform: rotate(45deg);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
    transform: scaleY(0);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
    transform: rotate(-45deg);
  }
  
  .nav-container input[type="checkbox"]:checked ~ .logo{
    display: none;
  }

  .nav-container input[type="checkbox"]:checked ~ .navbar{
    opacity: 0;
    box-shadow: none;
    transition: ease 0.5s;
  }
  

#main-nav a {
  display: inline-block;
  background-color: rgb(255, 255, 255);
  border-radius: 25px;
  width: 100px;
  padding: 10px;
  margin: 2px;
  white-space: nowrap;
  transition: box-shadow ease-in-out 0.5s, color ease-in-out 0.2s;
  color: black;
}

#main-nav a:hover {
    box-shadow: rgba(121, 121, 121, 0.7) 1px 4px 8px;
}

#main-nav a:active {
    color: lightgreen; 
}

/* header #hero-info */

.big-screen {
  /* this will set to dispay:block on larger screens */
  display: none;
}

#hero-info {
  height: 90%;
}

#greetings {
  width: 20em;
}

/* about section */
#about {
  grid-area: about;
}

#about-box {
  flex-flow: row wrap;
  align-items: center;
  justify-content: space-around;
  max-width: 1200px;
}

#selfie {
  height: 18em;
  width: 18em;
  border: 1px dashed white;
  border-radius: 50%;
  margin: 2em;
}

#selfie > img {
    width: 19em;
}

#about-text {
  margin: 2em;
}

/* benefit section */
#benefits {
  grid-area: benefits;
}

#benefits-container {
  flex-flow: row wrap;
  max-width: 1200px;
  padding: 2em 0;
}

.card {
  margin: 1em;
  width: 10em;
  height: 15em;
  background-color: white;

  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  border: none;
  border-radius: 0.2em;
  padding: 0;
  box-shadow: rgba(70, 70, 70, 0.7) 1px 4px 8px;
  transition: box-shadow, transform ease-in, ease-in-out .5s;
}

.card:hover {
  box-shadow: rgba(70, 70, 70, 0.247) 6px 20px 10px;
  transform: translateY(-0.1em);
  z-index: 2;
}

.card-text-bg {
  background: rgb(238, 183, 183);
  width: 100%;
  height: 40%;
  border-radius: 10% 10% 0 0;
  color: rgb(255, 255, 255);
  font-size: 1.4em;
}

/* setting background-images for #benefits .card */
#benefit-one {
  background: url(../img/cards/yogapose1.png) center;
  background-size: cover;
}
#benefit-two {
  background: url(../img/cards/yogapose2.png) center;
  background-size: cover;
}
#benefit-three {
  background: url(../img/cards/yogapose3.png) center;
  background-size: cover;
}
#benefit-four {
  background: url(../img/cards/yogapose4.png) center;
  background-size: cover;
}
#benefit-five {
  background: url(../img/cards/yogapose5.png) center;
  background-size: cover;
}
#benefit-six {
  background: url(../img/cards/yogapose6.png) center;
  background-size: cover;
}

/* join section */
#join {
  grid-area: join;
}

#newsletter {
  margin: 2em;
  flex-direction: column;
  max-width: 765px;
  background: whitesmoke;
}

#newsletter-info {
    padding-bottom: 0;
}

.letter-form > fieldset {
  border: none;
}

.letter-form {
  flex-direction: column;
  overflow: hidden;
  
}


.form-field {
  padding: 1em;
  border-radius: 20px;
  border: none;
  width: 100%;
  background: rgb(203, 203, 214);
  transition: background-color ease 0.6s;
  margin: 0.7em;
}

.form-field:focus {
  padding: 1em;
  width: 100%;
  background-color: rgb(224, 224, 224);
  box-shadow: 0;
  outline: none;
}

#letter-submit{
    margin: 0.4em 0 1.8em 0 !important;
}

/* footer section */
footer {
  grid-area: footer;
}

#footer-container{
    min-height: 12em;
    width: 100%;
    flex-direction: column;
    justify-content: flex-end;
    background:  green;
}

.social-links{
    width: 15em;
    justify-content: space-around;
    margin: 2em;
}

.social-links a{
    color: pink;
    font-size: 2.2em;
}

#copyrights {
    margin: 2em;
    font-size: 0.8em;
    color: pink; 
}

@media only screen and (min-width: 580px) {
/* header section */

    /* nav */

    #main-nav a {
        width: 70px;
      }

   .nav-container {
        display: flex;
        justify-content: center;
      }

    .hamburger-lines{
        display: none;
        }
    
    
    .nav-container > .checkbox {
       display: none;
    }
    
      .menu-items {
        background: 0;
        transform: translatex(0);
        flex-direction: row;
        transition: transform .0s ease;
        position: fixed;
        box-shadow: none;
        height: 50px;
      }
      
      .menu-items li {
        margin-bottom: 1rem;
        font-size: 1rem;
      }
      
      #main-nav > li:last-child {
          margin-right: 2em;
        }
    /* hero */

    #hero-info{
        flex-direction: row;
        justify-content: flex-end;  
        
    }

    #greetings {
        margin-right: 10%;
    }


 
/* join section */
    #newsletter-info {
    width: 100%;
    padding: 2em;
  }
  #newsletter-info > p{
    width: 80%;
    margin: 1em auto;
  }
}

@media only screen and (min-width: 740px) {
/* header section */

.nav-container {
    justify-content: flex-end;
  }

#main-nav {
    margin-right: 50px;
}

/* hero-info */

#hero-info{
    justify-content: space-around;
    
}

#greetings {
    margin-right: 11%;
    flex-shrink: 1;
}

.tiny-screen {
    display: none;
}

.big-screen {
    display: block;
}

#big-welcome-heading{
    font-size: 10vw;
    max-width: 40%;
    flex-shrink: 3;
    margin-left:3%;
    background: rgba(255, 255, 255, 0.753);
}


/* about section */
  #about-box {
    min-height: 800px;
  }
  #about-text {
    width: 40%;
  }
/* join section */
  #newsletter-info {
    width: 100%;
  }

  #letter-form {
    flex-direction: column;
  }

  .letter-form {
    flex-direction: row;
  }

  .card {
      width: 12em;
      height: 19em;
  }

}

@media only screen and (min-width: 768px) {
/* header section */
header {
    height: 700px;
    transition: all ease .5s;      
}

/* benefits  section*/
  #benefits-container {
    gap: 50px;
  }


}

@media only screen and (min-width: 1015px) {
    /* benefits section */
        
        .card{
            width: 13em;
            height: 22em;
            margin: 2em;
          }
    }


@media only screen and (min-width: 1200px) {
/* heading section */
    #big-welcome-heading{
        font-size: 8em;
        margin-left:5%;
    }
    #greetings {
        margin-right: 4%;
        flex-shrink: 1;
    }
    
    .card{
        width: 15em;
        height: 24em;
        
      }
}


/* building the hambuger menu */

